Added index entries to reading

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(message = FALSE)
 
 ## Overview 
 
-In this chapter, you’ll learn to read tabular data of various formats into R from your local device (e.g. your laptop) and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
+In this chapter, you’ll learn to read tabular data of various formats into R from your local device (e.g. your laptop) and the web. “Reading” (or “loading”) \index{loading|see{reading}}\index{reading!definition} is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
 
 ## Chapter learning objectives
 By the end of the chapter, readers will be able to:
@@ -46,14 +46,14 @@ By the end of the chapter, readers will be able to:
 ## Absolute and relative file paths
 
 This chapter will discuss the different functions we can use to import data into R, but before we can talk about *how* we read the data into R with these functions, we first need to talk about *where* the data lives. When you load a data set into R, you first need to tell R where those files live. The file could live on your 
-computer (*local*) or somewhere on the internet (*remote*). 
+computer (*local*) \index{location|see{path}} \index{path!local,remote,relative,absolute} or somewhere on the internet (*remote*). 
 
 The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
 paths: *relative* paths and *absolute* paths. A relative path is where the file is with respect to where you currently are on the computer (e.g., where the file you're working in is). On the other hand, an absolute path is where the file is in respect to the computer's filesystem's base (or root) folder.
 
 Suppose our computer's filesystem looks like the picture in Figure \@ref(fig:file-system-for-export-to-intro-datascience), and we are working in a file titled `worksheet_02.ipynb`. If we want to 
 read in the `.csv` file named `happiness_report.csv` into R, we could do this using either a relative or an absolute path. 
-We show both choices below.
+We show both choices below.\index{Happiness Report}
 
 ```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840pt"}
 knitr::include_graphics("img/filesystem.jpeg")
@@ -95,7 +95,7 @@ In the additional resources section, we include a link to a short video on the d
 folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name 
 on each computer) and where the files and folders happen to be located on that particular computer. -->
 
-Your file could be stored locally, as we discussed, or it could also be somewhere on the internet (remotely). A *Uniform Resource Locator (URL)* (web address) indicates the location of a resource on the internet and helps us retrieve that resource. Next, we will discuss how to get either locally or remotely stored data into R. 
+Your file could be stored locally, as we discussed, or it could also be somewhere on the internet (remotely). A *Uniform Resource Locator (URL)* (web address) \index{URL} indicates the location of a resource on the internet and helps us retrieve that resource. Next, we will discuss how to get either locally or remotely stored data into R. 
 
 ## Reading tabular data from a plain text file into R
 
@@ -107,9 +107,9 @@ to *read* tabular data from a plain text file (a document containing only text)
 *into* R and *write* tabular data to a file *out of* R. The function we use to do this
 depends on the file's format. For example, the last chapter, we learned about using
 the `tidyverse` `read_csv` function when reading .csv (**c**omma-**s**eparated **v**alues)
-files. In that case, the separator or *delimiter* that divided our columns was a
+files. \index{csv} In that case, the separator or *delimiter* \index{reading!delimiter} that divided our columns was a
 comma (`,`). We only learned the case where the data matched the expected defaults 
-of the `read_csv` function 
+of the `read_csv` function \index{read function!read\_csv}
 (column names are present, and commas are used as the delimiter between columns). 
 In this section, we will learn how to read 
 files that do not satisfy the default expectations of `read_csv`.
@@ -118,7 +118,8 @@ Before we jump into the cases where the data aren't in the expected default form
 for `tidyverse` and `read_csv`, let's revisit the more straightforward
 case where the defaults hold, and the only argument we need to give to the function
 is the path to the file, `data/can_lang.csv`. The `can_lang` data set contains 
-language data from the 2016 Canadian census. We put `data/` before the file's
+language data from the 2016 Canadian census. \index{Canadian languages!canlang data} 
+We put `data/` before the file's
 name when we are loading the data set because this data set is located in a
 sub-folder, named `data`, relative to where we are running our R code.
 
@@ -130,7 +131,7 @@ head -n 10 data/can_lang.csv
 ```
 
 And here is a review of how we can use `read_csv` to load it into R. First we 
-load the `tidyverse` package to gain access to useful functions for reading the 
+load the `tidyverse` \index{tidyverse} package to gain access to useful functions for reading the 
 data. 
 
 ```{r, message = FALSE}
@@ -144,8 +145,8 @@ relative path to the file.
 canlang_data <- read_csv("data/can_lang.csv")
 ```
 
-> Note: it is also normal and expected that a message is printed out after using
-the `read_csv` and related functions. This message functions to let you know the
+> Note: it is also normal and expected that \index{warning} a message is printed out after using
+the `read_csv` and related functions. This message lets you know the
 data types of each of the columns that R inferred while reading the data into R.
 In future when we use this and related functions to load data in this book we 
 will silence these messages to help with readability of the book.
@@ -172,13 +173,13 @@ canlang_data <- read_csv("data/can_lang_meta-data.csv")
 
 > Note: In contrast to the normal and expected messages above, this time R 
 printed out a warning for us indicating that there might be a problem with how 
-our data is being read in.
+our data is being read in. \index{warning}
 
 ```{r}
 canlang_data
 ```
 
-To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3.
+To successfully read data like this into R, the `skip` argument \index{read function!skip argument} can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3.
 
 ```{r}
 canlang_data <- read_csv("data/can_lang_meta-data.csv", 
@@ -202,7 +203,9 @@ Another common way data is stored is with tabs as the delimiter. Notice the data
 head -n 10 data/can_lang_tab.tsv
 ```
 
-To read in this type of data, we can use the `read_tsv` to read in .tsv (**t**ab **s**eparated **v**alues) files. 
+To read in this type of data, we can use the `read_tsv` 
+\index{tab-separated values|see{tsv}}\index{tsv}\index{read function!read\_tsv}
+to read in .tsv (**t**ab **s**eparated **v**alues) files. 
 
 ```{r 01-read-tab}
 canlang_data <- read_tsv("data/can_lang_tab.tsv")
@@ -213,7 +216,7 @@ Let's compare the data frame here to the resulting data frame in section \@ref(r
 
 ### `read_delim` as a more flexible method to get tabular data into R
 
-`read_csv` and `read_tsv` are actually just special cases of the more general `read_delim` function. We can use `read_delim` to import both comma and tab-separated files (and more), we just have to specify the delimiter. The `can_lang.tsv` is a different version of this same data set with no column names and uses tabs as the delimiter instead of commas. 
+`read_csv` and `read_tsv` are actually just special cases of the more general `read_delim` \index{read function!read\_delim} function. We can use `read_delim` to import both comma and tab-separated files (and more), we just have to specify the delimiter. The `can_lang.tsv` is a different version of this same data set with no column names and uses tabs as the delimiter \index{reading!delimiter} instead of commas. 
 
 Here is how the file would look in a plain text editor:
 
@@ -221,9 +224,9 @@ Here is how the file would look in a plain text editor:
 head -n 10 data/can_lang.tsv
 ```
 
-To get this into R using the `read_delim` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names to assign, and give it the value of `FALSE`). `read_csv`, `read_tsv` and `read_delim` have a `col_names` argument and the default is `TRUE`. 
+To get this into R using the `read_delim` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` \index{read function!delim argument} argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names to assign, and give it the value of `FALSE`). `read_csv`, `read_tsv` and `read_delim` have a `col_names` argument \index{read function!col\_names argument} and the default is `TRUE`. 
 
-> `\t` is an example of an *escape character*, typically used to represent non-printing characters (like the tab) or characters with special meanings (such as quotation marks). 
+> `\t` is an example of an *escape character*, \index{escape character} typically used to represent non-printing characters (like the tab) or characters with special meanings (such as quotation marks). 
 
 ```{r}
 canlang_data <- read_delim("data/can_lang.tsv", 
@@ -236,7 +239,7 @@ canlang_data
 Data frames in R need to have column names.  Thus if you read in data that 
 don't have column names, R will assign names automatically. In the example above, R assigns each column a name of `X1, X2, X3, X4, X5, X6`.
 
-It is best to rename your columns to help differentiate between them (e.g. `X1, X2`, etc., are not very descriptive names and will make it more confusing as you code). To rename your columns, you can use the `rename` function from the `dplyr` package (one of the packages loaded with `tidyverse`, so we don't need to load it separately). The first argument is the data set, and in the subsequent arguments you write `new_name = old_name` for the selected variables to rename. We rename the `X1, X2, ..., X6` columns in the `canlang_data` data frame to more descriptive names below. 
+It is best to rename your columns to help differentiate between them (e.g. `X1, X2`, etc., are not very descriptive names and will make it more confusing as you code). To rename your columns, you can use the `rename` function \index{rename} from the `dplyr` \index{dplyr} package (one of the packages loaded with `tidyverse`, so we don't need to load it separately). The first argument is the data set, and in the subsequent arguments you write `new_name = old_name` for the selected variables to rename. We rename the `X1, X2, ..., X6` columns in the `canlang_data` data frame to more descriptive names below. 
 
 ```{r 01-rename-columns}
 canlang_data <- rename(canlang_data,
@@ -252,7 +255,7 @@ canlang_data
 ### Reading tabular data directly from a URL
 We can also use `read_csv`, `read_tsv` or `read_delim` (and related functions)
 to read in data directly from a **U**niform **R**esource **L**ocator (URL) that 
-contains tabular data. Here, we provide the URL to `read_*` as the path to the file
+contains tabular data. \index{URL!reading from} Here, we provide the URL to `read_*` as the path to the file
 instead of a path to a local file on our computer. We need to surround the URL with
 quotes similar to when we specify a path on our local computer. All other arguments
 that we use are the same as when using these functions with a local file on our computer.
@@ -273,7 +276,7 @@ delimiters are, and if there are lines you need to skip. You should do this your
 ## Reading tabular data from a Microsoft Excel file
 
 There are many other ways to store tabular data sets beyond plain text files, and similarly, many ways to load those data sets into R. For example, it is very common to encounter,
-and need to load into R, data stored as a Microsoft Excel spreadsheet (with the filename extension `.xlsx`). 
+and need to load into R, data stored as a Microsoft Excel \index{Excel spreadsheet}\index{Microsoft Excel|see{Excel spreadsheet}}\index{xlsx|see{Excel spreadsheet}} spreadsheet (with the filename extension `.xlsx`). 
 To be able to do this, a key thing to know is that even though `.csv` and `.xlsx` files look almost 
 identical when loaded into Excel, the data themselves are stored completely differently.
 While `.csv` files are plain text files, where the characters you see when you open the file in a text editor are exactly the data they represent,
@@ -316,7 +319,7 @@ X?a??4VT?,D?Jq
 
 This type of file representation allows Excel files to store additional things that you cannot store in a `.csv` file, such as fonts, text formatting, graphics, multiple sheets 
 and more. And despite looking odd in a plain text editor, we can read Excel spreadsheets into R using the `readxl` package developed 
-specifically for this purpose.
+specifically for this purpose. \index{readxl}\index{read function!read\_excel}
 
 ```{r}
 library(readxl)
@@ -346,7 +349,7 @@ Excel files (`.xlsx`) | `read_excel` | `readxl`
 
 ## Reading data from a database
 
-Another very common form of data storage is the relational database. Databases are great when you have large datasets or multiple users working on a project. There are many relational database management systems, such as
+Another very common form of data storage is the relational database. Databases \index{database} are great when you have large datasets or multiple users working on a project. There are many relational database management systems, such as
 [SQLite](https://www.sqlite.org/index.html), [MySQL](https://www.mysql.com/), [PostgreSQL](https://www.postgresql.org/), [Oracle](https://www.oracle.com/ca-en/index.html), and many more. These different relational database management systems each have their own advantages and limitations. Almost all employ SQL (*structured query language*) to pull data from the database. Though, you don't need to know SQL
 to analyze data from a database; 
 several packages have been written 
@@ -359,23 +362,23 @@ give examples of how to do this using R with SQLite and PostgreSQL databases.
 
 #### Reading data from a SQLite database
 
-SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
+SQLite \index{database!SQLite} is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
 
-The first thing you need to do to read data into R from a database is to connect to the database. We do that using the `dbConnect` function from the `DBI` (database interface) package. This does not read in the data, but simply tells R where the database is and opens up a communication channel.
+The first thing you need to do to read data into R from a database is to connect to the database. We do that using the `dbConnect` function from the `DBI` (database interface) package. \index{database!connect} This does not read in the data, but simply tells R where the database is and opens up a communication channel.
 
 ```{r}
 library(DBI)
 con_lang_data <- dbConnect(RSQLite::SQLite(), "data/can_lang.db")
 ```
 
-Often relational databases have many tables, and their power comes from the useful ways they can be joined. Thus anytime you want to access data from a relational database, you need to know the table names. You can get the names of all the tables in the database using the `dbListTables` function:
+Often relational databases have many tables, and their power comes from the useful ways they can be joined. Thus anytime you want to access data from a relational database, you need to know the table names. You can get the names of all the tables in the database using the `dbListTables` \index{database!tables} function:
 
 ```{r}
 tables <- dbListTables(con_lang_data)
 tables
 ```
 
-We only get one table name returned from calling `dbListTables`, which tells us that there is only one table in this database. To reference a table in the database to do things like select columns and filter rows, we use the `tbl` function from the `dbplyr` package. The package `dbplyr` allows us to work with data stored in databases as if they were local data frames, which is useful because we can do a lot with big datasets without actually having to bring these vast amounts of data into your computer! 
+We only get one table name returned from calling `dbListTables`, which tells us that there is only one table in this database. To reference a table in the database to do things like select columns and filter rows, we use the `tbl` function \index{database!tbl} from the `dbplyr` package. The package `dbplyr` \index{dbplyr|see{database}}\index{database!dbplyr} allows us to work with data stored in databases as if they were local data frames, which is useful because we can do a lot with big datasets without actually having to bring these vast amounts of data into your computer! 
 
 ```{r}
 library(dbplyr)
@@ -384,14 +387,14 @@ lang_db
 ```
 
 
-Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database. It does this because databases are often more efficient at selecting, filtering and joining large data sets than R. And typically, the database will not even be stored on your computer but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell it to using the `collect` function from the `dbplyr` package. Figure \@ref(fig:01-ref-vs-tibble) highlights the difference between a `tibble` object in R and the output we just got. Notice in the table on the right, the first two lines of the output indicate the source is SQL. The last line doesn't show how many rows there are (R is trying to avoid performing expensive query operations), whereas the output for the `tibble` object does. 
+Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database. It does this because databases are often more efficient at selecting, filtering and joining large data sets than R. And typically, the database will not even be stored on your computer but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell it to using the `collect` \index{database!collect} function from the `dbplyr` package. Figure \@ref(fig:01-ref-vs-tibble) highlights the difference between a `tibble` object in R and the output we just got. Notice in the table on the right, the first two lines of the output indicate the source is SQL. The last line doesn't show how many rows there are (R is trying to avoid performing expensive query operations), whereas the output for the `tibble` object does. 
 
 ```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of a reference to data in a database and a tibble in R", fig.retina = 2, out.width="800pt"}
 knitr::include_graphics("img/ref_vs_tibble.jpeg")
 ```
 
 We can look at the SQL commands that are sent to the database when we write 
-` tbl(con_lang_data, "lang")` in R with the `show_query` function from the `dbplyr` package.
+` tbl(con_lang_data, "lang")` in R with the `show_query` function from the `dbplyr` package. \index{database!show\_query}
 
 
 ```{r}
@@ -400,7 +403,7 @@ show_query(tbl(con_lang_data, "lang"))
 
 From the output above, we can see the SQL code sent to the database. When we write `tbl(con_lang_data, "lang")` in R, in the background, the function is translating the R code into SQL, asking the database, and then translating the response back to us. So instead of us needing to know the SQL code ourselves and switching back and forth between R and SQL code, the `dbplyr` package does that for us. 
 
-Now we will filter for only rows in the Aboriginal languages category according to the 2016 Canada Census, and then use `collect` to finally bring this data into R as a data frame. 
+Now we will filter for only rows in the Aboriginal languages category according to the 2016 Canada Census, and then use `collect` to finally bring this data into R as a data frame. \index{filter}
 
 ```{r}
 aboriginal_lang_db <- filter(lang_db, category == "Aboriginal languages")
@@ -416,12 +419,14 @@ Why bother to use the `collect` function? The data looks pretty similar in both 
 you can use to directly feed the database reference (what `tbl` gives you) into downstream analysis functions (e.g., `ggplot2` for data visualization and `lm` for 
 linear regression modeling). However, this does not 
 work in *every* case; look what happens when we try to use `nrow` to count rows in a data frame:
+\index{nrow}
 
 ```{r}
 nrow(aboriginal_lang_db)
 ```
  
 or `tail` to preview the last 6 rows of a data frame:
+\index{tail}
 
 ```{r, eval = FALSE}
 tail(aboriginal_lang_db)
@@ -433,7 +438,7 @@ Additionally, some operations will not work to extract columns or single values 
  
 #### Reading data from a PostgreSQL database 
 
-PostgreSQL (also called Postgres) is a very popular and open-source option for relational database software. Unlike SQLite, PostgreSQL uses 
+PostgreSQL (also called Postgres) \index{database!PostgreSQL} is a very popular and open-source option for relational database software. Unlike SQLite, PostgreSQL uses 
 a client–server database engine, as it was designed to be used and accessed on a network. This means that you have to provide more 
 information to R when connecting to Postgres databases. The additional information that you need to include when you call the `dbConnect` 
 function is listed below:
@@ -495,7 +500,7 @@ ratings_db
 ```
 
 To find the lowest rating that exists in the data base, we first need to extract the `average_rating` column using `select`:
-
+\index{select}
 ```{r, eval = FALSE}
 avg_rating_db <- select(ratings_db, average_rating)
 avg_rating_db
@@ -520,7 +525,7 @@ avg_rating_db
 ```
 
 Next we use `min` to find the minimum rating in that column:
-
+\index{min}
 ```{r, eval = FALSE}
 min(avg_rating_db)
 ```
@@ -546,7 +551,7 @@ We see the lowest rating given to a movie is 1, indicating that it must have bee
 
 ### Why should we bother with databases at all?
 
-Opening a database stored in a `.db` file involved a lot more effort than just opening a `.csv`, `.tsv`, or any of the other plain text or Excel formats. It was a bit of a pain to use a database in that setting since we had to use `dbplyr` to translate `tidyverse`-like commands (`filter`, `select`, `head`, etc.) into SQL commands that the database understands. Not all `tidyverse` commands can currently be translated with SQLite databases. For example, we can compute a mean with an SQLite database but can't easily compute a median. So you might be wondering why should we use databases at all? 
+Opening a database \index{database!reasons to use} stored in a `.db` file involved a lot more effort than just opening a `.csv`, `.tsv`, or any of the other plain text or Excel formats. It was a bit of a pain to use a database in that setting since we had to use `dbplyr` to translate `tidyverse`-like commands (`filter`, `select`, `head`, etc.) into SQL commands that the database understands. Not all `tidyverse` commands can currently be translated with SQLite databases. For example, we can compute a mean with an SQLite database but can't easily compute a median. So you might be wondering why should we use databases at all? 
 
 Databases are beneficial in a large-scale setting:
 
@@ -560,7 +565,7 @@ For example, [there are billions of Google searches conducted daily](https://www
 ## Writing data from R to a `.csv` file
 
 At the middle and end of a data analysis, we often want to write a data frame that has changed (either through filtering, selecting, mutating or summarizing) to a file 
-to share it with others or use it for another step in the analysis. The most straightforward way to do this is to use the `write_csv` function from the `tidyverse` package. 
+to share it with others or use it for another step in the analysis. The most straightforward way to do this is to use the `write_csv` function \index{write function!write\_csv} from the `tidyverse` package. 
 The default arguments for this file are to use a comma (`,`) as the delimiter and include column names. Below we demonstrate creating a new version of the Canadian languages data set without the official languages category according to the Canadian 2016 Census, and then writing this to a `.csv` file:
 
 ```{r, eval = FALSE}
@@ -579,7 +584,8 @@ from a web URL using one of the `read_*` functions from the `tidyverse`. But
 as time goes on, it is increasingly uncommon to find
 data (especially large amounts of data) in this format available for download
 from a URL. Instead, websites now often offer something known as an **a**pplication
-**p**rogramming **i**nterface (API), which provides a programmatic way to ask
+**p**rogramming **i**nterface (API), \index{application programming interface|see{API}}\index{API}
+which provides a programmatic way to ask
 for subsets of a dataset. This allows the website owner to control *who* has access
 to the data, *what portion* of the data they have access to, and *how much* data they can access.
 Typically, the website owner will give you a *token* (a secret string
@@ -591,11 +597,11 @@ job it is to respond to requests for the website) to give it the website's data,
 and then your browser translates that data into something you can see. If the website
 shows you some information that you're interested in, you could *create* a data set for yourself
 by copying and pasting that information into a file. This process of taking information
-directly from what a website displays is called *web scraping* (or sometimes *screen scraping*). Now, 
+directly from what a website displays is called \index{web scraping} *web scraping* (or sometimes *screen scraping*). Now, 
 of course, copying and pasting information manually is a painstaking and error-prone process, especially when there is a lot of
 information to gather. So instead of asking your browser to translate the information that the
 web server provides into something you can see, you can collect
-that data programmatically---in the form of **h**yper**t**ext **m**arkup **l**anguage (HTML) 
+that data programmatically---in the form of **h**yper**t**ext **m**arkup **l**anguage (HTML) \index{hypertext markup language|see{HTML}}\index{cascading style sheet|see{CSS}}\index{CSS}\index{HTML}
 and **c**ascading **s**tyle **s**heet (CSS) code---and
 process it to extract useful information. HTML provides the basic structure of a site
 and tells the webpage how to display the content (e.g. titles, 
@@ -613,13 +619,15 @@ using the [`rtweet` R package](https://github.com/ropensci/rtweet).
 
 When you enter a URL into your browser, your browser connects to the
 web server at that URL and asks for the *source code* for the website.
-This is the data that the browser translates into something you can see; so if we
+This is the data that the browser translates 
+\index{web scraping}\index{HTML!selector}\index{CSS!selector}
+into something you can see; so if we
 are going to create our own data by scraping a website, we have to first understand
 what that data looks like! For example, let's say we are interested
 in knowing the average rental price (per square foot) of the most recently
-available one-bedroom apartments in Vancouver from
+available one-bedroom apartments in Vancouver from 
 https://vancouver.craigslist.org. When we visit the Vancouver Craigslist
-website and search for one-bedroom apartments, this is what we are shown:
+website \index{Craigslist} and search for one-bedroom apartments, this is what we are shown:
 
 ![](img/craigslist_human.png)
 
@@ -687,7 +695,7 @@ That is definitely storing the price of a particular apartment. With some more i
 you should be able to find things like the date and time of the listing, the address of the listing,
 and more. So this source code most likely contains all the information we are interested in!
 
-Let's dig into that line above a bit more. You can see that that bit of code
+Let's dig into that line \index{HTML!tag} above a bit more. You can see that that bit of code
 has an *opening tag* (words between `<` and `>`, like `<span>`) and a *closing tag* 
 (the same with a slash, like `</span>`). HTML source code generally stores
 its data between opening and closing tags like these. Tags are keywords which tell the web browser how to display or format the content. Above you can see that
@@ -750,7 +758,7 @@ R if we are using more than one CSS selector.
 
 **Stop! Are you allowed to scrape that website?**
 
-*Before* scraping data from the web, you should always check whether or not
+*Before* scraping \index{web scraping!permission} data from the web, you should always check whether or not
 you are *allowed* to scrape it! There are two documents that are important
 for this: the `robots.txt` file and the Terms of Service
 document. Let's take a look at Craigslist's Terms of Service document:
@@ -770,7 +778,7 @@ The more realistic answer is that we simply cannot scrape Craigslist. If we stil
 to find data about rental prices in Vancouver, we must go elsewhere.
 
 To continue learning how to scrape data from the web, let's instead
-scrape data on the population of Canadian cities from Wikipedia.
+scrape data on the population of Canadian cities from Wikipedia. \index{Wikipedia}
 We have checked the [Terms of Service document](https://foundation.wikimedia.org/wiki/Terms_of_Use/en),
 and it does not mention that web scraping is disallowed. 
 We will use the SelectorGadget tool to pick elements that we are interested in
@@ -793,7 +801,7 @@ Now that we have the CSS selectors that describe the properties of the elements 
 
 **Using `rvest`**
 
-Now that we have our CSS selectors we can use the `rvest` R package to scrape our
+Now that we have our CSS selectors we can use the `rvest` R package \index{rvest} to scrape our
 desired data from the website. We start by loading the `rvest` package:
 
 ```{r 01-load-rvest}
@@ -806,7 +814,7 @@ Next, we tell R what page we want to scrape by providing the webpage's URL in qu
 page <- read_html("https://en.wikipedia.org/wiki/Canada")
 ```
 
-The `read_html` function directly downloads the source code for the page at 
+The `read_html` function \index{read function!read\_html} directly downloads the source code for the page at 
 the URL you specify, just like your browser would if you navigated to that site. But 
 instead of  displaying the website to you, the `read_html` function just returns 
 the HTML source code itself, which we have
@@ -863,7 +871,7 @@ such as this into a more useful format for data analysis using R.
 ### Using an API
 
 Rather than posting a data file at a URL for you to download, many websites these days
-provide an API that must be accessed through a programming language like R. The benefit of this
+provide an API \index{API} that must be accessed through a programming language like R. The benefit of this
 is that data owners have much more control over the data they provide to users. However, unlike
 web scraping, there is no consistent way to access an API across websites. Every website typically
 has its own API designed specially for its own use-case. Therefore we will just provide one example
@@ -872,8 +880,9 @@ idea that you can learn how to use another API if needed.
 
 In particular, in this book we will show you the basics of how to use
 the [rtweet](https://github.com/ropensci/rtweet) package in R
+\index{API!rtweet}\index{rtweet}\index{Twitter} 
 to access data from the [Twitter](www.twitter.com) API. One nice feature of this particular 
-API is that you don't need  a special *token* to access it; you simply need to 
+API is that you don't need  a special *token* \index{API!token} to access it; you simply need to 
 make an account with them. Your access to the data will then be authenticated and controlled through
 your account username and password. If you have a Twitter account already (or are willing to make one), you can follow
 along with the examples that we show here. To get started, load the `rtweet` package:
